--- a/web/commonStyles.css
+++ b/web/commonStyles.css
@@ -104,13 +104,10 @@ div.gallery input {
 div.desc {
 	padding: 15px;
 	text-align: center;
-	text-size: smaller;
 }
 
 .resultBody {
-	margin: 2em;
-	margin-left: 5em;
-	margin-right: 5em;
+	margin: 2em 5em;
 }
 
 @media all and (max-width: 500px){
@@ -129,8 +126,22 @@ div.desc {
 	margin-top: 2em;
 }
 
+.infoParagraphInLogin > a {
+	text-decoration: none;
+	font-weight: normal;
+}
+
+.infoParagraphInLogin > a:hover {
+	text-decoration: none;
+	font-weight: bold;
+}
+
 .errorMessageInLogin {
 	color: brown;
 	font-size: 1em;
 	margin-top: 1em;
+}
+
+#searchTitle {
+	font-size: 2em;
 }
